fix(URL): use URI.create for URL